<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_list"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_list"
        android:orderInCategory="100"
        android:title="@string/action_delete_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="100"
        android:title="@string/action_delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_white_24px"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"/>
</menu>
