<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Views.ViewTaskActivity"
    tools:showIn="@layout/activity_view_task">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/task_list_info"
    android:layout_below="@+id/view"
    android:layout_toRightOf="@+id/include"
    android:layout_marginLeft="42dp"
    android:layout_marginStart="42dp"
    android:layout_marginTop="60dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/list_underline"
        android:id="@+id/task_parent_list" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="List Name"
        android:id="@+id/task_parent_list_text"
        android:layout_marginLeft="5dp"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parent_task_info"
        android:layout_below="@+id/task_list_info"
        android:layout_alignLeft="@+id/task_list_info"
        android:layout_alignStart="@+id/task_list_info"
        android:layout_marginTop="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/parent_task_underline"
        android:id="@+id/parent_task" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Task Name"
        android:id="@+id/parent_task_text"
        android:layout_alignTop="@+id/parent_task"
        android:layout_toRightOf="@+id/parent_task"
        android:layout_toEndOf="@+id/parent_task"
        android:layout_marginLeft="5dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/subTask_underline"
        android:id="@+id/subTask_title"
        android:layout_below="@+id/parent_task_info"
        android:layout_alignLeft="@+id/task_list_info"
        android:layout_alignStart="@+id/task_list_info"
        android:layout_marginTop="10dp" />

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/subTask_list"
        android:name="honorsthesis.gabriella.honorsthesis.ItemFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/fragment_item"
        android:layout_toRightOf="@+id/task_list_info"
        android:layout_toEndOf="@+id/task_list_info"
        android:layout_below="@+id/subTask_title"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/due_date_info"
        android:layout_below="@+id/subTask_list"
        android:layout_alignLeft="@+id/task_list_info"
        android:layout_alignStart="@+id/task_list_info"
        android:layout_marginTop="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/due_date_underline"
        android:id="@+id/due_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Due Date"
        android:id="@+id/due_date_text"
        android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/priority_info"
        android:layout_below="@+id/due_date_info"
        android:layout_alignLeft="@+id/task_list_info"
        android:layout_alignStart="@+id/task_list_info"
        android:layout_marginTop="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/priority_underline"
        android:id="@+id/priority"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="PRIORITY"
        android:id="@+id/priority_text"
        android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notes_underline"
        android:id="@+id/task_notes_title"
        android:layout_below="@+id/priority_info"
        android:layout_alignLeft="@+id/task_list_info"
        android:layout_alignStart="@+id/task_list_info"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="These are some notes!"
        android:id="@+id/task_notes"
        android:layout_below="@+id/task_notes_title"
        android:layout_alignLeft="@+id/task_list_info"
        android:layout_alignStart="@+id/task_list_info"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp" />
</RelativeLayout>
