<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Views.ViewProcessActivity"
    tools:showIn="@layout/activity_view_process">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/process_list_info"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/list_underline"
            android:id="@+id/process_parent_list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="List Name"
            android:id="@+id/process_parent_list_text"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/steps_underline"
        android:id="@+id/steps_title"
        android:layout_below="@+id/process_list_info"
        android:layout_alignLeft="@+id/process_list_info"
        android:layout_alignStart="@+id/process_list_info"
        android:layout_marginTop="10dp" />

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/steps_list"
        android:name="honorsthesis.gabriella.honorsthesis.ItemFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/fragment_item"
        android:layout_toRightOf="@+id/process_list_info"
        android:layout_toEndOf="@+id/process_list_info"
        android:layout_below="@+id/steps_title"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notes_underline"
        android:id="@+id/process_notes_title"
        android:layout_below="@+id/steps_list"
        android:layout_alignLeft="@+id/process_list_info"
        android:layout_alignStart="@+id/process_list_info"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="These are some notes!"
        android:id="@+id/process_notes"
        android:layout_below="@+id/process_notes_title"
        android:layout_alignLeft="@+id/process_list_info"
        android:layout_alignStart="@+id/process_list_info"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp" />

</RelativeLayout>
