<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Views.ViewTaskActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/create_step_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--list section-->
            <LinearLayout
                android:id="@+id/task_list_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/task_parent_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/create_align_label_margin"
                    android:text="@string/list_underline"
                    android:textSize="@dimen/create_label" />

                <TextView
                    android:id="@+id/task_parent_list_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/create_align_label_margin"
                    android:layout_marginLeft="@dimen/align_label_with_text_margin"
                    android:text="List Name"
                    android:textSize="@dimen/create_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/parent_task_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/parent_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/create_align_label_margin"
                    android:text="@string/parent_task_underline"
                    android:textSize="@dimen/create_label" />

                <TextView
                    android:id="@+id/parent_task_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/create_align_label_margin"
                    android:layout_marginLeft="@dimen/align_label_with_text_margin"
                    android:text="Task Name"
                    android:textSize="@dimen/create_label" />
            </LinearLayout>

            <!-- subtask section-->
            <TextView
                android:id="@+id/subTask_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/create_align_label_margin"
                android:text="@string/subTask_underline"
                android:textSize="@dimen/create_label" />

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/subTask_list"
                android:name="honorsthesis.gabriella.honorsthesis.ItemFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subTask_title"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1.40"
                android:fillViewport="true"
                app:layoutManager="LinearLayoutManager"
                tools:context=".Views.ViewTaskActivity"
                tools:listitem="@layout/fragment_item_with_checkbox">

            </android.support.v7.widget.RecyclerView>

            <!-- due date section-->
            <LinearLayout
                android:id="@+id/due_date_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/create_align_label_margin"
                    android:text="@string/due_date_underline"
                    android:textSize="@dimen/create_label" />

                <TextView
                    android:id="@+id/due_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/create_align_label_margin"
                    android:layout_marginLeft="@dimen/align_label_with_text_margin"
                    android:text="Due Date"
                    android:textSize="@dimen/create_label" />
            </LinearLayout>

            <!--priority section-->
            <LinearLayout
                android:id="@+id/priority_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/create_align_label_margin"
                    android:text="@string/priority_underline"
                    android:textSize="@dimen/create_label" />

                <TextView
                    android:id="@+id/priority_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/create_align_label_margin"
                    android:layout_marginLeft="@dimen/align_label_with_text_margin"
                    android:text="PRIORITY"
                    android:textSize="@dimen/create_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/task_notes_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/create_align_label_margin"
                    android:text="@string/notes_underline"
                    android:textSize="@dimen/create_label" />

                <TextView
                    android:id="@+id/task_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/create_align_label_margin"
                    android:text="These are some notes!"
                    android:textSize="@dimen/create_label"
                    android:layout_marginLeft="@dimen/text_margin" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
